# adversary_emulation_library

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  changelog.md  dictionary.yaml  dictionary.yml  emulation_plan_structure.md  format_changelog.md  format_dictionary.yaml  format_dictionary.yml  format_schema.json  tox.ini
.github/ISSUE_TEMPLATE/: osint-contrib.yml
.github/workflows/: build.yml  ci-tests.yml  dead-links-check.yml  validate.yml
apt29/: CHANGE_LOG.md  Intelligence_Summary.md  NOTICE.txt  Operations_Flow.md  README.md
apt29/Archive/: NOTICE.txt  README.md
apt29/Emulation_Plan/: APT29.yaml  README.md
apt29/Resources/: README.md
blindEagle/: NOTICE.txt  README.md
blindEagle/Emulation_Plan/: Blind_Eagle_Scenario.md  README.md
blindEagle/Intelligence_Summary/: intelligence_summary.md
blindEagle/Operations_Flow/: Operations_Flow.md
carbanak/: CHANGE_LOG.md  Intelligence_Summary.md  NOTICE.txt  Operations_Flow.md  README.md
carbanak/Emulation_Plan/: README.md
carbanak/Resources/: README.md
carbanak/hashes/: README.md  SHA256SUMS.txt  SHA512SUMS.txt
carbanak/yara-rules/: README.md  attack_katz.txt  carbanak_master.txt  dumpWebCreds.txt  http_rat.txt  java-update.txt  keylogger.txt  tiny.txt
fin6/: CHANGE_LOG.md  Intelligence_Summary.md  NOTICE.txt  Operations_Flow.md  README.md
fin7/: CHANGE_LOG.md  Intelligence_Summary.md  NOTICE.txt  Operations_Flow.md
fin7/hashes/: README.md  (+2 more)
menuPass/: CHANGE_LOG.md  Intelligence_Summary.md  NOTICE.txt  Operations_Flow.md  README.md
menu_pass/: Intelligence_Summary.md
micro_emulation_plans/: README.md
ocean_lotus/: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  doxy.cfg
oilrig/: NOTICE.txt  README.md
resources/: README.md  ctid_aep_to_caldera.py  format_schema.json  plan_validator.py
sandworm/: README.md
structure/: emulation_plan_structure.md
turla/: README.md
turla/Resources/Carbon/CarbonInstaller/Dropper/: .gitignore  CMakeLists.txt  add_resources.py
turla/Resources/Carbon/CarbonInstaller/Dropper/include/: file_handler.h  service_handler.h
turla/Resources/Carbon/CarbonInstaller/Dropper/resources/: carbon_dc_config  carbon_w1_config  carbon_w2_config  dummy_comms  dummy_orch
turla/Resources/Carbon/CarbonInstaller/Dropper/src/: CMakeLists.txt  file_handler.cpp  main.cpp  service_handler.cpp
turla/Resources/Carbon/CarbonInstaller/Dropper/tests/: dummy_components.cpp  file_handler_test.cpp  service_handler_test.cpp
turla/Resources/Carbon/CommLib/: .gitignore  CMakeLists.txt  CommLibVersion.h.in  README.md  decrypt_logs.py  vcpkg.json
turla/Resources/Carbon/CommLib/include/: CommLib.hpp  Config.hpp  EncUtils.hpp  HttpClient.hpp  Locker.hpp  Logging.hpp  NamedPipeP2p.hpp  Tasks.hpp  Util.hpp  WindowsWrappers.hpp  configFile.h
turla/Resources/Carbon/CommLib/src/: CMakeLists.txt  CommLib.cpp  EncUtils.cpp  HttpClient.cpp  Locker.cpp  Logging.cpp  NamedPipeP2p.cpp  Tasks.cpp  Util.cpp  WindowsWrappers.cpp  configFileUtils.cpp  dllmain.cpp
turla/Resources/Carbon/CommLib/test/: commlib_test.cc  dummyConfigFile.txt  enc_utils_test.cc  http_test.cc  logging_test.cpp  named_pipe_p2p_test.cc  tasks_test.cc  testing.h  testingUtils.cpp  utils_test.cc
turla/Resources/Carbon/Orchestrator/: .gitignore  CMakeLists.txt  OrchestratorVersion.h.in  README.md  build.ps1  output-itest.ps1
turla/Resources/Carbon/Orchestrator/include/: config_encrypt.h  enc_handler.h  injection.h  locker.h  mutex.h  orchestrator.h  tasking.h  util.h
turla/Resources/Carbon/Orchestrator/src/: CMakeLists.txt  enc_handler.cpp  injection.cpp  locker.cpp  main.cpp  mutex.cpp  orchestrator.cpp  tasking.cpp  util.cpp
turla/Resources/Carbon/Orchestrator/test/: castDecrypt.cpp  config_encrypt.cpp  dllspawnnp.cpp  testdllrunner.cpp
turla/Resources/EPIC/payload/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
turla/Resources/EPIC/payload/include/: base64_y.h  comms.h  epic.h  file_ops.h  instruction.h
turla/Resources/EPIC/payload/src/: CMakeLists.txt  base64_y.cpp  comms.cpp  epic.cpp  file_ops.cpp
turla/Resources/EPIC/payload/tests/: comms_test.cpp
turla/Resources/LightNeuron/CompanionDLL/: .gitignore  CMakeLists.txt  vcpkg.json
turla/Resources/LightNeuron/CompanionDLL/data/: rules.xml
turla/Resources/LightNeuron/CompanionDLL/include/: base64.h  exdbdata.h  stego.h
turla/Resources/LightNeuron/CompanionDLL/src/: base64.cpp  exdbdata.cpp  rules.xml  stego.cpp
turla/Resources/LightNeuron/CompanionDLL/tests/: snake_extract_64.txt  tests.cpp
turla/Resources/LightNeuron/CompanionDLL/util/: analyze_image.cpp
turla/Resources/LightNeuron/TransportAgent/Microsoft.Exchange.Transport.Agent.ConnectionFiltering.Tests/TestIngestStruct/: CMakeLists.txt  TestIngestStruct.cpp  TestIngestStruct.h
turla/Resources/Snake/SnakeInstaller/src/: CMakeLists.txt  main.cpp
turla/Resources/Snake/SnakeInstaller/src/ci/: ci.cpp  ci.hpp  nt.cpp  nt.hpp
turla/Resources/Snake/SnakeInstaller/src/common/: error.cpp  error.hpp  handle.hpp  string.cpp  string.hpp
turla/Resources/Snake/SnakeInstaller/src/driver/: driver.cpp  driver.hpp  gb.hpp
turla/Resources/Snake/SnakeInstaller/src/privesc/: privesc.cpp  privesc.hpp
turla/Resources/Snake/SnakeInstaller/src/resource/: resource.cpp  resource.hpp  resource.rc  resources.hpp
turla/Resources/Snake/UserModule/: CMakeLists.txt  README.md
turla/Resources/Snake/UserModule/include/: api_wrappers.h  comms_http.h  comms_pipe.h  core.h  enc_handler.h  execute.h  file_handler.h  instruction.h  logging.h  usermodule_errors.h  util.h
turla/Resources/Snake/UserModule/src/: CMakeLists.txt  api_wrappers.cpp  comms_http.cpp  comms_pipe.cpp  core.cpp  dllmain.cpp  enc_handler.cpp  execute.cpp  execute_token.cpp  file_handler.cpp  instruction.cpp  logging.cpp  util.cpp
turla/Resources/Snake/UserModule/tests/: comms_http_test.cpp  comms_pipe_test.cpp  core_test.cpp  enc_handler_test.cpp  execute_test.cpp  instruction_test.cpp  logging_test.cpp  test_util.h  util_test.cpp
wizard_spider/: .gitignore  NOTICE.txt  README.md
(+1822 files in other folders)
